--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ max-width:100px;
   
   <script>
     function myFunction() {
-      location.replace("https://massennger2.blogspot.com/")
+      location.replace("https://masenger1gold.blogspot.com/")
     }
   </script>
   
